# dfns-sdk-rs

./: .gitignore  Cargo.toml  README.md  cobertura.xml  structure.md
.github/workflows/: coverage.yml
src/: error.rs  lib.rs  main.rs  signer.rs  store.rs
src/api/: mod.rs
src/api/auth/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/exchanges/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/networks/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/permissions/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/policies/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/signers/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/staking/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/wallets/: client.rs  delegated_client.rs  mod.rs  types.rs
src/api/webhooks/: client.rs  delegated_client.rs  mod.rs  types.rs
src/client/: api_client.rs  authenticator.rs  base_auth_api.rs  delegated_api_client.rs  mod.rs
src/models/: auth.rs  exchanges.rs  generic.rs  mod.rs  networks.rs  permissions.rs  policies.rs  signers.rs  staking.rs  wallets.rs  webhooks.rs
src/utils/: base64.rs  bigint.rs  crypto.rs  fetch.rs  mod.rs  nonce.rs  string.rs  url.rs  user_action_fetch.rs
tests/: auth_tests.rs  exchanges_tests.rs  mod.rs  networks_tests.rs  permissions_tests.rs  policies_tests.rs  signers_tests.rs  wallets_tests.rs  webhooks_tests.rs
tests/common/: fixtures.rs  mocks.rs  mod.rs
tests/unit/: error_test.rs  mod.rs  signer_test.rs  store_test.rs
tests/unit/api/: mod.rs
(+64 files in other folders)
