[package]
name = "dfns-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
