[package]
name = "dfns-sdk-rs"
version = "0.1.21"
edition = "2021"
description = "Modular, extensible, and easy-to-use Rust SDK for the Dfns API"
license = "MIT"
repository = "https://github.com/deltartificial/dfns-sdk-rs"
documentation = "https://docs.rs/dfns-sdk-rs"
readme = "README.md"
keywords = ["dfns", "sdk", "api", "crypto", "wallet"]
categories = ["api-bindings", "cryptography"]

[dependencies]
base64 = "0.22.1"
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
uuid = { version = "1.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2.0.11"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tokio-test = "0.4"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.6.1"
wiremock = "0.6.2"